# ens-label-inspector

./: .gitignore  DEV.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  python-publish.yml
label_inspector/: inspector.py  lambda.py  models.py  web_api.py
label_inspector/analysis/: analysis_framework.py  char_analysis.py  confusable_grapheme_analysis.py  confusable_multi_grapheme_analysis.py  grapheme_analysis.py  grapheme_with_confusables_analysis.py  label_analysis.py
label_inspector/common/: generate_cache.py  on_demand_regex.py  pickle_cache.py  punycode.py
label_inspector/common/cache/: label_inspector.common.myunicode.data.MyUnicodeData._data-0.pickle  label_inspector.common.myunicode.grapheme.AllHanguls.hangul_jamo-0.pickle  label_inspector.components.confusables.Confusables._full_confusable_graphemes-cf14b262710b6fe5432ff5737ae12cd2.pickle  label_inspector.components.confusables.Confusables._simple_confusable_graphemes-cf14b262710b6fe5432ff5737ae12cd2.pickle  label_inspector.components.font_support.FontSupport.supported-f9c51467fc626af5140dc6cb40441ddc.pickle  label_inspector.components.font_support.FontSupport.unsupported-f9c51467fc626af5140dc6cb40441ddc.pickle
label_inspector/common/myunicode/: __init__.py  blocks.py  data.py  emojis.py  grapheme.py  myunicode.json  myunicode.py  scripts.py  special.py  utils.py
label_inspector/components/: confusables.py  features.py  font_support.py
label_inspector/config/: __init__.py  test_config.yaml
label_inspector/config/inspector/: prod.yaml
label_inspector/data/: confusables.json  grapheme_confusables.json  script_names.txt
label_inspector/data/tests/: unicode_numerics.txt
label_inspector/downloader/: download_confusables.py  download_myunicode.py  download_tests.py  generate_grapheme_confusables.py
tests/: helpers.py  stress_test.py  test_confusables.py  test_font_support.py  test_inspector.py  test_myunicode.py  test_punycode.py  test_web_api_inspector.py  test_web_api_inspector_prod.py
