[tool.poetry]
name = "ens-label-inspector"
version = "0.2.6"
readme = "README.md"
license = "MIT"
description = ""
authors = ["NameHash Team <devops@namehash.io>"]
maintainers = ["NameHash Team <devops@namehash.io>"]
homepage = "https://github.com/namehash/ens-label-inspector"
repository = "https://github.com/namehash/ens-label-inspector"
packages = [
    { include = "label_inspector" }
]
exclude = [
    "label_inspector/data/tests"
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ens-normalize = "^3.0.6"
fastapi = "^0.104.0"
hydra-core = "^1.3.2"
regex = "^2023.10.3"
emoji = "^2.8.0"
more-itertools = "^10.1.0"
mangum = {version = "^0.17.0", optional = true}


[tool.poetry.extras]
lambda = ["mangum"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-timeouts = "^1.2.1"
flake8 = "^6.1.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.0"
tqdm = "^4.66.1"
ruff = "^0.1.6"
pre-commit = "^3.5.0"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # imported but unused
"tests/*.py" = ["E741"] # ambiguous variable name


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
